--- a/resources.qmd
+++ b/resources.qmd
@@ -71,12 +71,10 @@ toc: true
 - **[An alternative to pink & blue: Colors for gender data](https://blog.datawrapper.de/gendercolor/), by Lisa Charlotte Muth (Datawrapper)** -- a blog post on avoiding gender stereotypes in your color choices
 
 ## Scrollytelling {#scrollytelling}
+
 - **[Closeread Gallery](https://closeread.dev/gallery/)** -- A curated collection of 18 winning and runner-up entries from the Closeread Competition, plus feature demos showcasing what the framework is capable of. All scrollytelling stories include full source code, making it a great place to learn by example.
-
 - **[Learn Closeread](https://www.gastonsanchez.com/learn-closeread/modules/)**-- A structured, multi-module course by Gaston Sanchez that walks you through Closeread from the ground up. Covers everything from installation and basic setup to layout options, focus effects, styling, and building complete scrollytelling stories using text, images, equations, and plots.
-
 - **[CAUSE Student Data Scrollytelling Contest](https://www.causeweb.org/cause/contests/data-scrollytelling)** -- A student competition run by CAUSE (Consortium for the Advancement of Undergraduate Statistics Education) challenging participants to tell compelling data-driven stories through scrollytelling. A good place to find inspiration, see what students are making, or consider entering yourself.
-
 - **[Scrollytelling Examples](https://nrennie.rbind.io/scrollytelling/), by Nicola Rennie** -- A small collection of polished Closeread scrollytelling stories by data visualisation specialist Nicola Rennie, covering topics like a reimagined Gapminder animation, English monarchs and their marriages, and a lightning talk built with Closeread's zoom features. All source code is available on GitHub.
 
 ## A mix of a cool miscellaneous resources {#misc}
@@ -93,6 +91,7 @@ toc: true
 - Grainger S, Mao F, Buytaert W (2016) **Environmental data visualisation for non-scientific contexts: Literature review and design framework.** Environmental Modelling & Software. 85:299-318. <https://doi.org/10.1016/j.envsoft.2016.09.004>
 - Rougier NP, Droettboom M, Bourne PE (2014) **Ten Simple Rules for Better Figures.** PLOS Computational Biology. 10(9): e1003833. <https://doi.org/10.1371/journal.pcbi.1003833>
 - **[Teach About Climate Change With 30 Graphs From The New York Times](https://www.nytimes.com/2024/01/31/learning/lesson-plans/teach-about-climate-change-with-30-graphs-from-the-new-york-times.html)** -- a new (as of January 2024) collection to explore our planet's warming oceans, intensifying storms and rising air temperatures, as well as its greenhouse gas emissions and climate solutions
+- Bannister HJ, Blackwell PG, Hyder K, Webb TJ (2021) **Improving the visual communication of environmental model projections.** Scientific Reports. 11, 19157. <https://doi.org/10.1038/s41598-021-98290-4>
 
 ### news / reporting outlets {#news-reporting}
 
