Update peer feedback slides and add form to week 7

--- a/course-materials/lab/LAB-SLIDES-peer-feedback1.qmd
+++ b/course-materials/lab/LAB-SLIDES-peer-feedback1.qmd
@@ -19,7 +19,7 @@ editor_options:
 
 <hr class="hr-dark-blue">
 
-[Week 7 | February 18^th^, 2025]{.custom-subtitle3}
+[Week 7 | February 19^th^, 2026]{.custom-subtitle3}
 
 ---
 
@@ -71,21 +71,23 @@ editor_options:
 
 ## {#exercise data-menu-title="Exercise"}
 
-[With a partner:]{.slide-title}
+[Peer Feedback Round 1:]{.slide-title}
+
+With your Round 1 Partner: 
 
 <hr>
 
-1. Take 10 minutes to review your partner's viz and jot down (in the notes section of their Google slide):
+1. Take 5 minutes to review your partner's viz and jot down (in the [peer evaluation feedback form](https://docs.google.com/document/d/1xV-YF5PyfoZA_HXmiHC2NqaS5t5tTb8C_AtndsoM0JA/edit?tab=t.0) ):
   - **1 thing you really love / find effective**
   - **1 piece of high-level feedback + suggest an alternative approach**
   - **1 piece of detailed-oriented feedback + suggest an alternative approach**
-2. Spend 10 minutes exchanging feedback and discussing your visualizations
+2. Spend 5 minutes exchanging feedback and discussing your visualizations
 
 <br>
 
 ```{r}
 countdown::countdown(
-  minutes = 20,
+  minutes = 10,
   # left = 0, right = 0,
   # Fanfare when it's over
   play_sound = TRUE,
@@ -107,6 +109,92 @@ countdown::countdown(
 - **1 thing your partner saw as an area for improvement + a suggested alternative**
 
 ---
+
+
+## {#exercise data-menu-title="Exercise"}
+
+[Peer Feedback Round 2:]{.slide-title}
+
+With your Round 2 Partner: 
+
+<hr>
+
+1. Take 5 minutes to review your partner's viz and jot down (in the [peer evaluation feedback form](https://docs.google.com/document/d/1xV-YF5PyfoZA_HXmiHC2NqaS5t5tTb8C_AtndsoM0JA/edit?tab=t.0) ):
+  - **1 thing you really love / find effective**
+  - **1 piece of high-level feedback + suggest an alternative approach**
+  - **1 piece of detailed-oriented feedback + suggest an alternative approach**
+2. Spend 5 minutes exchanging feedback and discussing your visualizations
+
+<br>
+
+```{r}
+countdown::countdown(
+  minutes = 10,
+  # left = 0, right = 0,
+  # Fanfare when it's over
+  play_sound = TRUE,
+  color_border              = "#FFFFFF",
+  color_text                = "#7aa81e",
+  color_running_background  = "#7aa81e",
+  color_running_text        = "#FFFFFF",
+  color_finished_background = "#ffa07a",
+  color_finished_text       = "#FFFFFF",
+  font_size = "2em",
+  )
+```
+
+. . .
+
+[In the last ~25 minutes of section, we'll do a rapid fire share out of feedback. Please be prepared to share with the class:]{.body-text-m}
+
+- **1 thing your partner really enjoyed and why**
+- **1 thing your partner saw as an area for improvement + a suggested alternative**
+
+---
+
+
+
+## {#exercise data-menu-title="Exercise"}
+
+[Peer Feedback Round 3:]{.slide-title}
+
+With your Round 3 Partner: 
+
+<hr>
+
+1. Take 5 minutes to review your partner's viz and jot down (in the [peer evaluation feedback form](https://docs.google.com/document/d/1xV-YF5PyfoZA_HXmiHC2NqaS5t5tTb8C_AtndsoM0JA/edit?tab=t.0) ):
+  - **1 thing you really love / find effective**
+  - **1 piece of high-level feedback + suggest an alternative approach**
+  - **1 piece of detailed-oriented feedback + suggest an alternative approach**
+2. Spend 5 minutes exchanging feedback and discussing your visualizations
+
+<br>
+
+```{r}
+countdown::countdown(
+  minutes = 10,
+  # left = 0, right = 0,
+  # Fanfare when it's over
+  play_sound = TRUE,
+  color_border              = "#FFFFFF",
+  color_text                = "#7aa81e",
+  color_running_background  = "#7aa81e",
+  color_running_text        = "#FFFFFF",
+  color_finished_background = "#ffa07a",
+  color_finished_text       = "#FFFFFF",
+  font_size = "2em",
+  )
+```
+
+. . .
+
+[In the last ~25 minutes of section, we'll do a rapid fire share out of feedback. Please be prepared to share with the class:]{.body-text-m}
+
+- **1 thing your partner really enjoyed and why**
+- **1 thing your partner saw as an area for improvement + a suggested alternative**
+
+---
+
 
 ## {#context data-menu-title="Reminder: context is important"}
 
