--- a/course-materials/week7.qmd
+++ b/course-materials/week7.qmd
@@ -56,10 +56,7 @@ We'll learn how to use [Font Awesome](https://fontawesome.com/){target="_blank"}
 
 ## {{< fa clipboard-list title="a clipboard with a To Do list" >}} Pre-lab Prep {#pre-lab-prep} 
 
-::: {.callout-important}
-## TODO
-- develop critique form that can be submitted to instructors & to peer
-:::
+
 
 From here on out, we'll be using lab sections to share drafts of final project data visualizations and receive feedback from peers. Please complete the following before coming to section:
 
@@ -111,9 +108,9 @@ The following tips were largely adapted from this [LinkedIn article](https://www
 
 ## {{< fa comments title="two speech bubbles" >}} Lab Materials {#lab-materials}
 
-| {{< fa person-chalkboard title="A person motioning at a chalkboard" >}} Lab Slides | {{< fa file-code title="A code file" >}} Exercise instructions | {{< fa key title="A key" >}} Exercise solutions |
+| {{< fa person-chalkboard title="A person motioning at a chalkboard" >}} Lab Slides | {{< fa file-code title="A code file" >}} Exercise instructions | {{< fa comments title="two speech bubbles" >}} Peer Feedback Form |
 |-------------------|-------------------|--------------|
-| [Lab 7 slides: peer feedback](lab/LAB-SLIDES-peer-feedback1.qmd){target="_blank"} | [Google Slides](https://docs.google.com/presentation/d/1mMcss-mUqTkqT_iefZ2QfDr_3NoVwkYEGK4q-8WhjOw/edit?slide=id.g3b24bce2e19_0_0#slide=id.g3b24bce2e19_0_0){target="_blank"} | *NA* |
+| [Lab 7 slides: peer feedback](lab/LAB-SLIDES-peer-feedback1.qmd){target="_blank"} | [Google Slides](https://docs.google.com/presentation/d/1mMcss-mUqTkqT_iefZ2QfDr_3NoVwkYEGK4q-8WhjOw/edit?slide=id.g3b24bce2e19_0_0#slide=id.g3b24bce2e19_0_0){target="_blank"} | [Peer Feedback Form](https://docs.google.com/document/d/1xV-YF5PyfoZA_HXmiHC2NqaS5t5tTb8C_AtndsoM0JA/copy) |
 : {.hover .bordered tbl-colwidths="[50,25,25]"} 
 
 ## {{< fa pencil title="pencil" >}} Assignment Reminders {#assignment-reminders}
